<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10_dp"
                    android:fontFamily="@font/avenir_pro_bold"
                    android:text="@string/string_hello"
                    android:textColor="@color/colorBlack"
                    android:textSize="28sp" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView"
            android:layout_width="244dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/avenir_pro_bold_demi"
            android:text="@string/search_string"
            android:textColor="@color/colorBlack"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <SearchView
            android:id="@+id/sv_movies"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/background_search"
            android:iconifiedByDefault="false"
            android:queryBackground="@drawable/background_search"
            android:queryHint="Search"
            android:searchIcon="@drawable/ic_search"
            android:theme="@style/SearchTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_movies">

            <TextView
                android:id="@+id/tv_recommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/avenir_pro_bold_demi"
                android:text="@string/recommended"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_recommended"
                tools:listitem="@layout/item_movies" />

            <ProgressBar
                android:id="@+id/progress_bar_recommended"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_discover"
                app:layout_constraintEnd_toEndOf="@+id/rv_discover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_discover" />

            <TextView
                android:id="@+id/tv_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/avenir_pro_bold_demi"
                android:text="@string/top_rated"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_discover" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_top"
                tools:listitem="@layout/item_movies" />

            <ProgressBar
                android:id="@+id/pb_top"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_top_rated"
                app:layout_constraintEnd_toEndOf="@+id/rv_top_rated"
                app:layout_constraintStart_toStartOf="@+id/rv_top_rated"
                app:layout_constraintTop_toTopOf="@+id/rv_top_rated" />


            <TextView
                android:id="@+id/tv_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/avenir_pro_bold_demi"
                android:text="@string/upcoming"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_top_rated" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_upcoming"
                tools:listitem="@layout/item_movies" />

            <ProgressBar
                android:id="@+id/pb_upcoming"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_upcoming"
                app:layout_constraintEnd_toEndOf="@+id/rv_upcoming"
                app:layout_constraintStart_toStartOf="@+id/rv_upcoming"
                app:layout_constraintTop_toTopOf="@+id/rv_upcoming" />

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/avenir_pro_bold_demi"
                android:text="@string/popular"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_upcoming" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_popular"
                tools:listitem="@layout/item_movies" />

            <ProgressBar
                android:id="@+id/pb_popular"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_popular"
                app:layout_constraintEnd_toEndOf="@+id/rv_popular"
                app:layout_constraintStart_toStartOf="@+id/rv_popular"
                app:layout_constraintTop_toTopOf="@+id/rv_popular" />

            <TextView
                android:id="@+id/tv_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/avenir_pro_bold_demi"
                android:text="@string/now_playing"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_popular" />

            <TextView
                android:id="@+id/all_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/see_all"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/rv_now_playing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_upcoming"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_now_playing"
                tools:listitem="@layout/item_movies" />

            <ProgressBar
                android:id="@+id/pb_now_playing"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_now_playing"
                app:layout_constraintEnd_toEndOf="@+id/rv_now_playing"
                app:layout_constraintStart_toStartOf="@+id/rv_now_playing"
                app:layout_constraintTop_toTopOf="@+id/rv_now_playing" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
