<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBackground"
    tools:context=".view.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/poster_path"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius_bottom_left="20dp"
            app:riv_corner_radius_bottom_right="20dp"
            tools:src="@color/colorSearch" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/avenir_pro_bold"
            android:text="NETFIX"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster_path"
            android:layout_marginLeft="20dp" />

        <RatingBar
            android:id="@+id/rb_movies"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:rating="4"
            android:outlineSpotShadowColor="@color/colorYellow"
            android:theme="@style/RatingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/poster_path"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/avenir_pro_bold_demi"
            android:text="Five months before the hurricane, Tami Oldham arrives in Tahiti on board the schooner Sofia and meets Richard Sharp, a British sailor.
            Richard invites Tami for dinner aboard his boat Mayaluga"
            android:textColor="#c9d2dd"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:gravity="start" />

        <TextView
            android:id="@+id/preview"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/preview"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_pro_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2170 People"
            android:textColor="#c9d2dd"
            app:layout_constraintStart_toEndOf="@+id/preview"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            android:textSize="12sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/genre"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/genres"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_pro_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preview"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="music"
            app:layout_constraintStart_toEndOf="@+id/genre"
            app:layout_constraintTop_toBottomOf="@id/tv_preview"
            android:textColor="#c9d2dd"
            android:textSize="12sp"
            android:layout_marginTop="18dp"/>


        <TextView
            android:id="@+id/date"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/release"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_pro_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2020-09-23"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@id/tv_genre"
            android:textColor="#c9d2dd"
            android:textSize="12sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/avenir_pro_bold_demi"
            android:text="@string/trailer_movies"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            android:layout_marginLeft="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailer"
            tools:listitem="@layout/item_trailer"
            android:layout_marginLeft="10dp" />
        <TextView
            android:id="@+id/tv_recommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/avenir_pro_bold_demi"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/recommended"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailer"
            android:layout_marginLeft="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recommended"
            tools:listitem="@layout/item_movies"
            android:layout_marginLeft="10dp" />

        <Button
            android:id="@+id/bt_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/abc_vector_test"
            app:layout_constraintBottom_toBottomOf="@+id/poster_path"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="PrivateResource"
            android:layout_marginLeft="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>